src/styles/index.scss
/* ... */
.section-intro {
    flex-direction: column;
    position: absolute;
    text-align: right;
    z-index: 4000;
    margin: auto;
    right: 0;
    pointer-events: none;
    h1 {
        font-size: $section-heading;
        font-weight: 300;
        color: $dark-turq;
        margin: 0 2rem;
        right: 0;
    }
}

.section {
    @include main-section();
    background-color: $bg;
    display: flex;
    color: $black;
}

.section-left,
.section-right {
    @include center-parents();
    flex: 1;
    text-align: left;
    overflow-y: hidden;
    overflow-x: hidden;
}

.section-left {
    flex-grow: 1;
    flex-direction: column;
}

.section-right {
    background-color: $darker-turq;
    overflow-x: hidden;
    position: relative;
    flex-direction: column;
    z-index: 1000;
}

.illustration {
    width: 90%;
    margin: auto;
}

.titles {
    width: 70%;
    h1 {
        margin: auto;
        font-weight: 400;
        font-size: $big-heading;
    }
    p {
        font-size: $normal-text;
    }
    span {
        color: $dark-turq;
    }
    span.secondary-span {
        color: $dark-orange;
    }
}

.button-wrapper {
    @include center-parents();
    position: absolute;
    background: $bg;
    width: 70%;
    height: 40%;
    justify-content: end;
    bottom: 0%;
}

.explore-button {
    border: none;
    border-radius: 0;
    background: linear-gradient(to right, $turquoise 50%, $dark-orange 50%, $dark-orange 60%, $dark-turq 60%, $dark-turq 100%);
    background-size: 250% 100%;
    background-position: right;
    position: absolute;
    top: 0;
    color: $light-turq;
    padding: 0.7rem 1.9rem;
    transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
    font-size: $normal-text;
    color: $bg;
    font-weight: 600;
    font-family: "Spartan MB", sans-serif;
    cursor: pointer;
    &:hover {
        background-position: left;
        color: $dark-orange;
    }
}

#About {
    .section-left {
        flex-direction: row;
        .about-content {
            @include center-parents();
            position: relative;
            width: 50%;
            height: 100%;
            width: 100%;
            .about-titles {
                width: 70%;
                .title-child {
                    margin: 3rem 0;
                    p {
                        margin: 0;
                        font-size: $normal-text;
                    }
                }
            }
            .button-wrapper {
                position: relative;
                background: transparent;
                height: auto;
            }
            .pic-holder {
                position: relative;
                @include center-parents();
                display: grid;
                grid-template-columns: 20% 20% 20% 20% 20%;
                grid-template-rows: 70% 30%;
                grid-template-areas: "hero hero hero hero hero" "kid1 kid1 kid2 kid2 kid2";
                row-gap: 0.3rem;
                column-gap: 0.3rem;
                width: 85%;
                height: 70%;
                img {
                    object-fit: cover;
                }
                .hero-pic {
                    width: 100%;
                    height: 100%;
                    grid-area: hero;
                }
                .kid-pic {
                    width: 100%;
                    height: 100%;
                    grid-area: kid1;
                }
                .kid2-pic {
                    width: 100%;
                    height: 100%;
                    grid-area: kid2;
                }
            }
        }
    }
}

#Courses {
    .section-intro {
        left: 0;
        right: auto;
        text-align: left;
        h1 {
            color: $bg;
        }
    }
    .courses-panel {
        @include center-parents();
        position: relative;
        justify-content: space-between;
        display: grid;
        grid-template-columns: 25% 25% 25% 25%;
        column-gap: 1rem;
        row-gap: 1rem;
        width: 90%;
        height: 60%;
        .course {
            @include center-parents();
            flex-direction: column;
            position: relative;
            width: 100%;
            height: 100%;
            background: $light-turq;
            overflow: hidden;
            .course-img {
                @include center-parents();
                position: absolute;
                overflow: hidden;
                width: 100%;
                height: 60%;
                top: 0;
                img {
                    object-fit: cover;
                    width: 250%;
                }
            }
            .course-des {
                @include center-parents();
                position: absolute;
                bottom: 0;
                width: 100%;
                height: 40%;
                .course-des-wrapper {
                    width: 90%;
                    h2 {
                        font-weight: 500;
                        color: $darker-turq;
                        font-size: $small-heading;
                        margin-top: 0;
                    }
                    p {
                        color: $black;
                        font-size: $small-text;
                    }
                }
            }
        }
    }
}
/* ... */

